# linear_algebra

./: .gitignore  CMakeLists.txt  build_script.sh  cleanup_script.sh  main.cpp  makefile
src/: CMakeLists.txt  main  main.cpp  matrix.hpp  test_class.cpp  test_class.h  vector3d.cpp  vector3d.hpp
test/: CMakeLists.txt  unit_test_vector3d.cpp  unit_test_vector3d.h
